--- a/templates/index.html
+++ b/templates/index.html
@@ -32,9 +32,9 @@
         <header class="masthead">
             <div class="container">
 
-                {% block Inicio %}
+                {% block inicio %}
                 <h3> Esta es la pagina de inicio <h3/>
-                {% endblock Inicio %}<br><br><br><br><br><br>
+                {% endblock %}<br><br><br><br><br><br>
 
                 <div class="masthead-subheading">Welcome To Our Page!</div>
                 <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
