--- a/templates/AppTurismo/formulario_universal.html
+++ b/templates/AppTurismo/formulario_universal.html
@@ -10,6 +10,8 @@
     {% csrf_token %}
 
         {{form.as_p}}
+        <h4>{{info}}</h4>
+        {{form1.as_p}}
 
         <input type='submit' value={{Button_value}}>
 
