--- a/templates/base/navigation.html
+++ b/templates/base/navigation.html
@@ -13,8 +13,14 @@
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                <li class="nav-item"><a class="btn btn-primary" href="">Login</a></li>
-                <li class="nav-item"><a class="btn btn-primary" href="">Registro</a></li>
+                
+                {% if user.is_authenticated %}
+                    <h5>User: {{ user.get_username }}</h5>
+                    <li class="nav-item"><a class="btn btn-primary" href="{% url 'AppUserLogout' %}">Logout</a></li>
+                {% else %}
+                    <li class="nav-item"><a class="btn btn-primary" href="{% url 'AppUserLogin'%}">Login</a></li>
+                    <li class="nav-item"><a class="btn btn-primary" href="{% url 'AppUserRegister'%}">Registro</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
