--- a/templates/base/navigation.html
+++ b/templates/base/navigation.html
@@ -16,6 +16,7 @@
                 
                 {% if user.is_authenticated %}
                     <h5>User: {{ user.get_username }}</h5>
+                    <li class="nav-item"><a class="btn btn-primary" href="{% url 'AppUserEdit' %}">Edit User</a></li>
                     <li class="nav-item"><a class="btn btn-primary" href="{% url 'AppUserLogout' %}">Logout</a></li>
                 {% else %}
                     <li class="nav-item"><a class="btn btn-primary" href="{% url 'AppUserLogin'%}">Login</a></li>
