--- a/templates/AppUser/formulario_universal.html
+++ b/templates/AppUser/formulario_universal.html
@@ -6,14 +6,15 @@
 
 {% block inicio %}
 
-    <form action= '' method='{{ method }}'>
+    <form action= '' method='{{ method }}' enctype="multipart/form-data">
+        
     {% csrf_token %}
         <h4>{{info}}</h4>
         {{form.as_p}}
         
         {{form1.as_p}}
 
-        <input type='submit' value={{Button_value}}>
+        <input style="width: 100px"; type='submit' value={{Button_value}} >
 
     </form>
 
