--- a/templates/base/navigation.html
+++ b/templates/base/navigation.html
@@ -11,11 +11,12 @@
                 <li class="nav-item"><a class="nav-link" href="{% url 'AppTurismoPaquete' %}">PAQUETES TURISTICOS</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'AppBusquedaPeticion' %}">BUSQUEDA DE PAQUETE CONTRATADO</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
+                <!-- <li class="nav-item"><a class="nav-link" href="#team">Team</a></li> -->
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 
                 {% if user.is_authenticated %}
-                    <h5>User: {{ user.get_username }}</h5>
+                    <img height="40px" src="{{ user.avatar.imagen.url }}" alt="">
+                    <h5 style="color: rgb(194, 205, 42);">User: {{ user.get_username }}</h5>
                     <li class="nav-item"><a class="btn btn-primary" href="{% url 'AppUserEdit' %}">Edit User</a></li>
                     <li class="nav-item"><a class="btn btn-primary" href="{% url 'AppUserLogout' %}">Logout</a></li>
                 {% else %}
