--- a/templates/index.html
+++ b/templates/index.html
@@ -34,15 +34,15 @@
                 
 
                 {% block inicio %}
-                <h3> Esta es la pagina de inicio <h3/>
-                {% endblock %}<br><br>
+                <h3 class="masthead-subheading" style="color: Yellow;"> Esta es la pagina de inicio <h3/><br>
+                <h1 class="masthead-heading text-uppercase" >Bienvenido!!</h1>
+                {% endblock %}<br>
                 
                 {% for message in messages %}
                 <h4><p> {{ message }} </p></h4>
                 {% endfor %}<br>
                 
-                <div class="masthead-subheading">Welcome To Our Page!</div>
-                <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
+                <div class="masthead-heading text-uppercase" >Es un placer conocerte </div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
 
             </div>
