--- a/templates/AppUser/logout.html
+++ b/templates/AppUser/logout.html
@@ -1,10 +1,13 @@
 {% extends 'index.html' %}
+
 {% block title %}
     CIERRE DE SESION
 {% endblock  %}
 
 {% block inicio %}
-    <h2>Nos vemos en la proxima :) </h2>   
+    <h2>Nos vemos en la proxima :) </h2> 
+    <a class="btn btn-primary" href="{% url 'AppUserLogin' %}">Login</a>
+    <a class="btn btn-primary" href="{% url 'AppUserRegister' %}">Register</a>  
 {% endblock  %}
     
 
