--- a/templates/base/middle/portfolio.html
+++ b/templates/base/middle/portfolio.html
@@ -2,8 +2,8 @@
 <section class="page-section bg-light" id="portfolio">
     <div class="container">
         <div class="text-center">
-            <h2 class="section-heading text-uppercase">Portfolio</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Lugares a donde vamos</h2>
+            <h3 class="section-subheading text-muted">INFORMACIÓN</h3>
         </div>
         <div class="row">
             <div class="col-lg-4 col-sm-6 mb-4">
@@ -13,11 +13,11 @@
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="{% static 'assets/img/portfolio/1.jpg' %}" alt="..." />
+                        <img class="img-fluid" src="{% static 'assets/img/portfolio/1.1.jpg' %}" alt="..." />
                     </a>
                     <div class="portfolio-caption">
-                        <div class="portfolio-caption-heading">Threads</div>
-                        <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                        <div class="portfolio-caption-heading">Amsterdam</div>
+                        <div class="portfolio-caption-subheading text-muted">Click para más información!</div>
                     </div>
                 </div>
             </div>
@@ -28,11 +28,11 @@
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="{% static 'assets/img/portfolio/2.jpg' %}" alt="..." />
+                        <img class="img-fluid" src="{% static 'assets/img/portfolio/2.1.jpg' %}" alt="..." />
                     </a>
                     <div class="portfolio-caption">
-                        <div class="portfolio-caption-heading">Explore</div>
-                        <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                        <div class="portfolio-caption-heading">Rio de Janeiro</div>
+                        <div class="portfolio-caption-subheading text-muted">Click para más información!</div>
                     </div>
                 </div>
             </div>
@@ -43,11 +43,11 @@
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="{% static 'assets/img/portfolio/3.jpg' %}" alt="..." />
+                        <img class="img-fluid" src="{% static 'assets/img/portfolio/3.1.jpg' %}" alt="..." />
                     </a>
                     <div class="portfolio-caption">
-                        <div class="portfolio-caption-heading">Finish</div>
-                        <div class="portfolio-caption-subheading text-muted">Identity</div>
+                        <div class="portfolio-caption-heading">Barcelona</div>
+                        <div class="portfolio-caption-subheading text-muted">Click para más información!</div>
                     </div>
                 </div>
             </div>
@@ -58,11 +58,11 @@
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="{% static 'assets/img/portfolio/4.jpg' %}" alt="..." />
+                        <img class="img-fluid" src="{% static 'assets/img/portfolio/4.1.jpg' %}" alt="..." />
                     </a>
                     <div class="portfolio-caption">
-                        <div class="portfolio-caption-heading">Lines</div>
-                        <div class="portfolio-caption-subheading text-muted">Branding</div>
+                        <div class="portfolio-caption-heading">Miami</div>
+                        <div class="portfolio-caption-subheading text-muted">Click para más información!</div>
                     </div>
                 </div>
             </div>
@@ -73,11 +73,11 @@
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="{% static 'assets/img/portfolio/5.jpg' %}" alt="..." />
+                        <img class="img-fluid" src="{% static 'assets/img/portfolio/5.1.jpg' %}" alt="..." />
                     </a>
                     <div class="portfolio-caption">
-                        <div class="portfolio-caption-heading">Southwest</div>
-                        <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                        <div class="portfolio-caption-heading">Mendoza</div>
+                        <div class="portfolio-caption-subheading text-muted">Click para más información!</div>
                     </div>
                 </div>
             </div>
@@ -88,11 +88,11 @@
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="{% static 'assets/img/portfolio/6.jpg' %}" alt="..." />
+                        <img class="img-fluid" src="{% static 'assets/img/portfolio/6.1.jpg' %}" alt="..." />
                     </a>
                     <div class="portfolio-caption">
-                        <div class="portfolio-caption-heading">Window</div>
-                        <div class="portfolio-caption-subheading text-muted">Photography</div>
+                        <div class="portfolio-caption-heading">Buenos Aires</div>
+                        <div class="portfolio-caption-subheading text-muted">Click para más información!</div>
                     </div>
                 </div>
             </div>
