--- a/templates/base/navigation.html
+++ b/templates/base/navigation.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand" href="{% url 'AppInicio' %}"><img src="{% static 'assets/img/navbar-logo.svg' %}" alt="..." /></a>
+        <a class="navbar-brand" href="{% url 'AppInicio' %}"><img src="{% static 'assets/img/navbar-logo1.svg' %}" alt="..." /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fas fa-bars ms-1"></i>
@@ -10,13 +10,14 @@
             <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                 <li class="nav-item"><a class="nav-link" href="{% url 'AppTurismoPaquete' %}">PAQUETES TURISTICOS</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'AppBusquedaPeticion' %}">BUSQUEDA DE PAQUETE CONTRATADO</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'AppPaqueteContratado' %}">PAQUETES CONTRATADOS</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <!-- <li class="nav-item"><a class="nav-link" href="#team">Team</a></li> -->
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 
                 {% if user.is_authenticated %}
                     <img height="40px" src="{{ user.avatar.imagen.url }}" alt="">
-                    <h5 style="color: rgb(194, 205, 42);">User: {{ user.get_username }}</h5>
+                    <h5  style="color: rgb(194, 205, 42);">User: {{ user.get_username }}</h5>
                     <li class="nav-item"><a class="btn btn-primary" href="{% url 'AppUserEdit' %}">Edit User</a></li>
                     <li class="nav-item"><a class="btn btn-primary" href="{% url 'AppUserLogout' %}">Logout</a></li>
                 {% endif %}
